# pymosa

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
firmware/src/: mmc3.xdc  mmc3_m26_eth.v
firmware/vivado/: mmc3_m26_eth.xpr
pymosa/: __init__.py  configuration.yaml  eudaq.py  fifo_readout.py  m26.py  m26.yaml  m26_configuration.yaml  m26_raw_data.py  m26_readout.py  mmc3_m26_eth.bit  noise_occupancy_scan.py  noise_tuning.py  online.py  plotting.py  tune_tlu.py
pymosa/constellation/: READMDE.md  README.md  __main__.py  pymosa_conf.toml  pymosa_satellite.py
pymosa/constellation_pymosa/: main.py  pymosa_conf.toml  pymosa_satellite.py
pymosa/firmware/: mmc3_m26_eth.bit
pymosa/m26_config/: m26_threshold_10.yaml  m26_threshold_11.yaml  m26_threshold_4.yaml  m26_threshold_5.yaml  m26_threshold_6.yaml  m26_threshold_7.yaml  m26_threshold_8.yaml  m26_threshold_9.yaml  mmc3_anemome_th10.yaml  mmc3_anemome_th11.yaml  mmc3_anemome_th4.yaml  mmc3_anemome_th5.yaml  mmc3_anemome_th6.yaml  mmc3_anemome_th7.yaml  mmc3_anemome_th8.yaml  mmc3_anemome_th9.yaml
pymosa/online_monitor/: configuration.yaml  correlation_duts.yaml  hit_correlator_converter.py  hit_correlator_receiver.py  pymosa_converter.py  pymosa_histogrammer.py  pymosa_hit_correlator_conv.py  pymosa_hit_correlator_recv.py  pymosa_producer_sim.py  pymosa_receiver.py  start_pymosa_online_monitor.py
pymosa/tests/: anemone_raw_data_interpreted_result.h5  test_monitor.py  test_online_analysis.py  utils.py
